--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -37,3 +37,21 @@
 .contact__icon {
   font-size: 7rem !important;
 }
+
+@media only screen and (max-width: 750px) {
+  .contact {
+    margin-top: 4rem;
+  }
+
+  .contact > h1 {
+    font-size: calc(1rem + 6vw);
+  }
+
+  .contact__socials {
+    width: 80%;
+  }
+
+  .contact__icon {
+    font-size: 4rem !important;
+  }
+}
