--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -38,6 +38,12 @@
   color: white;
   margin: 0 auto;
   margin-top: 3rem;
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+}
+
+.about__text > a:hover {
+  transform: scale(1.04) translateY(-2px);
+  box-shadow: 0 14px 28px rgba(73, 130, 252, 0.3), 0 10px 10px rgba(0, 0, 0, 0);
 }
 
 @media only screen and (max-width: 750px) {
