--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -47,11 +47,20 @@
     font-size: calc(1rem + 6vw);
   }
 
+  .contact > p {
+    font-size: calc(0.7rem + 2vw);
+    padding: 0 0.5rem;
+  }
+
   .contact__socials {
     width: 80%;
   }
 
   .contact__icon {
     font-size: 4rem !important;
+  }
+
+  .contact__socials {
+    margin-bottom: 2rem;
   }
 }
