--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -32,6 +32,7 @@
   display: inline-block;
   width: auto;
   margin-right: 3rem;
+  cursor: pointer;
 }
 
 .hero__navbar > ul > li:last-child > a {
@@ -41,7 +42,7 @@
 .hero__navbar > ul > li > a {
   text-decoration: none;
   font-size: 1.2rem;
-  color: var(--light-text);
+  color: var(--text);
   font-weight: 500;
 }
 
@@ -53,6 +54,7 @@
   position: absolute;
   top: 30vh;
   left: 14vw;
+  color: var(--text);
 }
 
 .hero__title-top,
@@ -210,6 +212,124 @@
   top: 5vw;
   font-size: 35px !important;
   color: var(--primary-color-light);
+}
+
+.color-mode-container {
+  position: absolute;
+  top: 3rem;
+  right: 5vw;
+  height: 40px;
+  width: 80px;
+  border-radius: 20px;
+  z-index: 50;
+}
+
+.color-mode-container > input {
+  opacity: 0;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  z-index: 100;
+}
+
+.color-mode-container > input:checked ~ .slider__icon1 {
+  background: url(../images/moon.svg) center right;
+  position: absolute;
+  right: 5%;
+  transform: translateX(130%) rotate(-90deg);
+  bottom: 10%;
+  width: 39%;
+  height: 80%;
+  background-size: cover;
+  z-index: 70;
+  transition: 0.4s;
+}
+
+.color-mode-container > input:checked ~ .slider__icon2 {
+  position: absolute;
+  right: 10%;
+  top: 50%;
+  width: 35%;
+  height: 35%;
+  background: url(../images/star.svg) center right;
+  background-size: cover;
+  z-index: 70;
+  transition: 0.4s;
+  transform: translateX(-100%);
+}
+
+.color-mode-container > input:checked ~ .slider__icon3 {
+  position: absolute;
+  right: 30%;
+  top: 20%;
+  width: 23%;
+  height: 23%;
+  background: url(../images/star.svg) center right;
+  background-size: cover;
+  z-index: 70;
+  transition: 0.4s;
+  transform: translateX(-170%);
+}
+
+.color-mode-container > input:checked ~ .slider__icon4 {
+  position: absolute;
+  right: 10%;
+  top: 15%;
+  width: 15%;
+  height: 15%;
+  background: url(../images/star.svg) center right;
+  background-size: cover;
+  z-index: 70;
+  transition: 0.4s;
+  transform: translateX(-220%);
+}
+
+.slider__icon1 {
+  position: absolute;
+  left: 5%;
+  bottom: 10%;
+  width: 39%;
+  height: 80%;
+  background: url(../images/sun.svg) center right;
+  background-size: cover;
+  z-index: 70;
+  transition: 0.4s;
+}
+
+.slider__icon2 {
+  position: absolute;
+  right: 10%;
+  top: 50%;
+  width: 35%;
+  height: 35%;
+  background: url(../images/cloud.svg) center right;
+  background-size: cover;
+  z-index: 70;
+  transition: 0.4s;
+}
+
+.slider__icon3 {
+  position: absolute;
+  right: 30%;
+  top: 20%;
+  width: 23%;
+  height: 23%;
+  background: url(../images/cloud.svg) center right;
+  background-size: cover;
+  z-index: 70;
+  transition: 0.4s;
+}
+
+.slider__icon4 {
+  position: absolute;
+  right: 10%;
+  top: 15%;
+  width: 15%;
+  height: 15%;
+  background: url(../images/cloud.svg) center right;
+  background-size: cover;
+  z-index: 70;
+  transition: 0.4s;
 }
 
 @keyframes dropdown-link-appear {
