--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -16,6 +16,7 @@
 .hero__logo > img {
   width: 4rem;
   height: 4rem;
+  transition: 0.4s;
 }
 
 .hero__navbar {
@@ -55,6 +56,7 @@
   top: 30vh;
   left: 14vw;
   color: var(--text);
+  transition: 0.4s;
 }
 
 .hero__title-top,
@@ -173,10 +175,12 @@
   position: absolute;
   width: 100vw;
   height: 100vh;
-  background-color: white;
+  background-color: var(--bg);
   z-index: 100;
   transform: scale(0);
   transform-origin: top right;
+  color: var(--text);
+  transition: 0.4s;
 }
 
 .nav__mobile > ul {
@@ -198,20 +202,23 @@
 .nav__mobile > ul > li > a {
   text-align: start;
   text-decoration: none;
-  color: black;
+  color: var(--text);
   font-size: calc(0.8rem + 2vw);
+  transition: 0.4s;
 }
 
 .nav__mobile > ul > li:last-child > a {
   color: var(--primary-color-light);
+  transition: 0.4s;
 }
 
 .nav__exit {
   position: absolute;
-  right: 5vw;
-  top: 5vw;
+  right: 3vw;
+  top: 3vw;
   font-size: 35px !important;
   color: var(--primary-color-light);
+  transition: 0.4s;
 }
 
 .color-mode-container {
@@ -222,6 +229,7 @@
   width: 80px;
   border-radius: 20px;
   z-index: 50;
+  box-shadow: 0 0 7px #ffffcc;
 }
 
 .color-mode-container > input {
@@ -393,6 +401,104 @@
   }
 }
 
+@keyframes hamburger-line-1 {
+  0% {
+    transform-origin: center center;
+    transform: rotate(0);
+  }
+  50% {
+    transform-origin: center center;
+    transform: rotate(0);
+    top: calc(50% - 2px);
+  }
+  100% {
+    transform-origin: center center;
+    transform: rotate(45deg);
+    top: calc(50% - 2px);
+  }
+}
+
+@keyframes hamburger-line-1-reverse {
+  0% {
+    transform-origin: center center;
+    transform: rotate(45deg);
+    top: calc(50% - 2px);
+  }
+  50% {
+    transform-origin: center center;
+    transform: rotate(0);
+    top: calc(50% - 2px);
+  }
+  100% {
+    transform-origin: center center;
+    transform: rotate(0);
+  }
+}
+
+@keyframes hamburger-line-2 {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 1;
+  }
+  51% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+@keyframes hamburger-line-2-reverse {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 0;
+  }
+  51% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes hamburger-line-3 {
+  0% {
+    transform-origin: center center;
+    transform: rotate(0);
+  }
+  50% {
+    transform-origin: center center;
+    transform: rotate(0);
+    bottom: calc(50% - 2px);
+  }
+  100% {
+    transform-origin: center center;
+    transform: rotate(-45deg);
+    bottom: calc(50% - 2px);
+  }
+}
+
+@keyframes hamburger-line-3-reverse {
+  0% {
+    transform-origin: center center;
+    transform: rotate(-45deg);
+    bottom: calc(50% - 2px);
+  }
+  50% {
+    transform-origin: center center;
+    transform: rotate(0);
+    bottom: calc(50% - 2px);
+  }
+  100% {
+    transform-origin: center center;
+    transform: rotate(0);
+  }
+}
+
 @media only screen and (max-width: 1250px) and (orientation: landscape) {
   .hero {
     height: 800px;
@@ -424,7 +530,6 @@
   .hero__logo {
     top: 1rem;
     left: 1.7vw;
-    position: fixed;
   }
 
   .hero__logo > img {
@@ -435,7 +540,6 @@
   .hero__navbar {
     left: 10vw;
     top: 2.5rem;
-    position: fixed;
     z-index: 1;
   }
 
@@ -450,6 +554,14 @@
     background-size: 200%;
   }
 
+  .color-mode-container {
+    top: 1.2rem;
+    right: 4rem;
+    position: fixed;
+    height: 30px;
+    width: 60px;
+  }
+
   .hero__buttons {
     width: 46vw;
   }
@@ -457,6 +569,7 @@
   .hero__logo {
     top: 0.5rem;
     z-index: 5;
+    position: fixed;
   }
 
   .hero__navbar {
@@ -464,16 +577,48 @@
     top: 0;
     height: 4rem;
     left: 0;
-    background-color: white;
+    background-color: var(--bg);
     box-shadow: 0 7px 15px rgba(0, 0, 0, 0.15), 0 7px 7px rgba(0, 0, 0, 0);
+    position: fixed;
+    transition: 0.4s;
   }
 
   .nav__burgerBtn {
     display: initial;
     position: absolute;
     right: 3vw;
-    top: 1rem;
-    z-index: 5;
+    top: 1.5rem;
+    z-index: 100;
+    height: 20px;
+    width: 25px;
+    z-index: 2000;
+  }
+
+  .line-1 {
+    top: 0;
+    width: 25px;
+    background: rgb(41, 123, 255);
+    height: 4px;
+    border-radius: 50px;
+    position: absolute;
+  }
+
+  .line-2 {
+    top: 40%;
+    width: 25px;
+    background: rgb(41, 123, 255);
+    height: 4px;
+    border-radius: 50px;
+    position: absolute;
+  }
+
+  .line-3 {
+    bottom: 0;
+    width: 25px;
+    background: rgb(41, 123, 255);
+    height: 4px;
+    border-radius: 50px;
+    position: absolute;
   }
 
   .burger__icon {
