--- a/src/styles/Interests.css
+++ b/src/styles/Interests.css
@@ -2,6 +2,7 @@
   margin-top: 6rem;
   text-align: center;
   color: var(--text);
+  transition: 0.2s;
 }
 
 .interests > h1 {
@@ -25,6 +26,7 @@
   padding: 30px;
   transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
   background: var(--card-bg);
+  transition: 0.2s;
 }
 
 .interest__card:hover {
